--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "911-incidents-map",
   "version": "0.1.0",
   "dependencies": {
-    "@material-ui/core": "^4.9.3",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "esri-loader": "^2.15.0",
+    "moment": "^2.28.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.3"
